[package]
name = "monster-rts"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# remove ["dynamic"] when shipping. Also if we ever want to make this web it cant be here ether
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_ecs_tilemap = "0.6"
bevy-inspector-egui = "0.10.0"
rand = "0.8.5"
noise = "0.7.0"
rand_pcg = "0.3.1"
bevy_mod_debugdump = "0.4"